--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
   "homepage": "https://github.com/CrissyMichelle/dfacDash#readme",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jest": "^29.7.0",
+    "jsonschema": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "nunjucks": "^3.2.4",
+    "pg": "^8.11.3",
     "supertest": "^6.3.3"
   }
 }
