track .gitignore and added seed script to package.json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "jest -i",
+    "seed": "psql postgres -f dfacDash.sql",
     "start": "node server.js"
   },
   "repository": {
